--- a/css/index.css
+++ b/css/index.css
@@ -104,16 +104,23 @@ img {
 	text-align: left;
 }
 
-@media (max-width: 460px) {
+@media (max-width: 520px) {
 	#head-businessLogo img {
 		height: 60%;
 		margin-top: 5%;
 	}
+	
 	#head-contactInfo-em {
-		font-size: 0.85em;
+		text-align: center;
+		width: 100%;
 	}
 	#head-contactInfo-ph {
-		font-size: 0.85em;
+		text-align: center;
+		width: 100%;
+	}
+
+	#head-navDirectory {
+		padding-top: 25px;
 	}
 }
 
@@ -133,7 +140,7 @@ img {
 	padding-top: 5px;
 	text-align: center;
 	width: 90%;
-	margin:0 auto;
+	margin: 0 auto;
 	color: white;
 	
 }
@@ -141,6 +148,8 @@ img {
 #myNavbar li {
 	text-align: center;
 }
+
+
 
 .dropdown-toggle {
 	background-color: #13132C !important;
@@ -326,14 +335,16 @@ img {
 
 @media (max-width: 800px) {
 	#aboutCompSect {
-		height: 1000px;
+		height: 650px;
+		
 	}
 	.aboutCol {
 		margin-left: 50px;
 		margin-right: 50px;
 		width: 80%;
-		height: 500px;
+		height: 300px;
 		flex-direction: column;
+		padding-top: 50px;
 		display: flex;
 		justify-content: center;
 	}
@@ -408,7 +419,7 @@ img {
 
 @media (max-width: 700px) {
 	#serveSect {
-		height: 1000px;
+		height: 1100px;
 		margin: 0;
 		background-color: #f0f0f0;
 	}
@@ -427,15 +438,51 @@ img {
 	}
 
 	#serveContent {
-		height: 700px;
+		height: 775px;
 		margin: 0;
 	}
 
 	#serveContent .col-md-4 {
 		text-align:center;
-		height: 225px;
+		height: 250px;
 		margin-left: 15%;
 		margin-right: 15%;
+	}
+}
+
+@media (max-width: 550px) {
+	#serveSect {
+		height: 1300px;
+		margin: 0;
+		background-color: #f0f0f0;
+	}
+
+	#serveMTitle {
+		height: 50px;
+		margin: 0;
+	}
+
+	#serveSTitle {
+		height: 175px;
+		margin-left: 50px;
+		margin-right: 50px;
+		color: #4a4a4a;
+		text-align: center;
+	}
+
+	#serveContent {
+		height: 1000px;
+		margin: 0;
+	}
+
+	#serveContent .col-md-4 {
+		text-align:center;
+		padding-top: 75px;
+		padding-bottom: 75px;
+		height: 300px;
+		margin-left: 15%;
+		margin-right: 15%;
+		
 	}
 }
 
